<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Aquifers Around the World</string>
    <string name="button_title">Aquifers Around the World</string>
    <string name="button_play">The Problems</string>
    <string name="button_aboutus">About the Team</string>
    <string name="button_resources">Resources</string>
    <string name="title_activity_world_map">WorldMap</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_about_us">AboutUs</string>
    <string name="button_problem1">Contamination</string>
    <string name="description_contamination">The Problem:\nThere are many different types of contamination that can occur in groundwater throughout the world, both <b>anthropogenic</b> and <b>natural</b>. <b>Arsenic Contamination</b> is a form of natural contamination which effects many countries, including the United States. Soluble forms of Arsenic are found at deep depths and <b>when certain wells probe too deep</b>, such as in the Ganges, arsenous water can be exposed to large numbers of people.\n
        \nThe Solution:\nThat said there are <b>simple, inexpensive methods</b> used in the Indian Subcontinent and other places that are susceptible. One example is the <b>Sono arsenic filter</b> that use a series of pitchers acting as filters that people can use to <b>decontaminate</b> the water. A more expensive, advanced, and standardized method is the use of <b>“under the sink” units</b> that remove arsenic from drinking water.\n
        \nThe Problem:\nAnother contaminant is <b>Fluoride</b> which enters our groundwater through a combination of <b>natural and manmade actions</b>. Naturally occurring fluoride based compounds like <b>sodium fluoride and fluorsilicates</b> dissolve easily into percolating groundwater. More of it enters through discharge from <b>agricultural fertilizers</b> or <b>aluminum factories</b>.\n
        \nThe Solution:\nFluoride is removed through <b>distillation</b> or <b>reverse osmosis</b> but can be expensive.</string>
    <string name="button_problem2">Saltwater Intrusion</string>
    <string name="description_slowrecharge">The Problem:\nMany areas around the world have either become so deep that water <b>does not percolate down</b> to them or are so <b>shallow</b> they cannot contain significant amounts of <b>groundwater</b>. Furthermore many of the rocks in this area are <b>highly crystallized</b> decreasing retention of water. The <b>North African Basins</b> have both problems in that they have deep areas that receive no direct modern <b>recharge</b> from <b>rainfall</b> and they contain crystalline rock zones with water retention restricted to local pockets of <b>weathered or fractured rocks</b> or to shallow layers of sediments. Some of these regions have <b>naturally</b> become like this and humans cannot do much to prevent it. Some regions on the other hand, lose their capacity to hold water due to <b>overdrawing of water</b> as the <b>land collapses or subsides</b>, filling the air pockets to hold water such as in the <b>Peninsulas</b> and <b>Islands of South-East Asia</b>b>.\n
    \nThe Solution:\nWe must be cognizant of how we use these <b>fragile aquifers</b> and work hard not to misuse them to ensure their <b>preservation</b> in the future.</string>
    <string name="button_problem3">Slow Recharge Areas</string>
    <string name="description_saltwater">The Problem:\n<b>Saltwater Intrusion</b> is when <b>saline water</b> starts to move into the areas of the <b>freshwater aquifer</b>. This is especially common in <b>coastal aquifers</b> where the seawater and groundwater are not separated. Sea-water, being saline, is <b>denser</b> causing it to not mix with the water, but <b>push inland</b> and <b>beneath the freshwater</b>. Then as humans start to <b>overdraw</b> water from their aquifers, the freshwater aquifer quickly becomes <b>smaller</b> letting more seawater in and eventually the seawater will reach the <b>mouth of the well</b>, and only <b>saltwater will be drawn</b>. <b>Sea level rise</b> and increasing <b>tropical storms</b> only escalate this problem.\n
    \nThe Solution:\nTo prevent salt-water intrusion inhabitants must practice sustainable methods of drawing water drawing in moderate quantities and letting natural methods of recharge fill the aquifer before extracting large amounts again.</string>
    <string name="button_problem4">Hydraulic Fracturing</string>
    <string name="description_fracking">The Problem:\nFracking, short for <b>Hydraulic Fracturing</b>, is the process in which rock is fractured using hydraulically pressurized liquids. This fracturing and pressure causes <b>shale gas</b> and various <b>other hydrocarbons</b> to flow back up to be <b>harnessed for electrical energy</b>. That said it causes many environmental problems and is a <b>serious threat</b> to <b>groundwater</b> all across the world. Many of these wellbores penetrate straight through the ground to great depths <b>crossing many shallow and deep aquifers</b>. The hydraulic fracturing process causes <b>seismic activity</b> that can cause significant amounts of the natural gases being extracted to <b>mix into the aquifers</b>. This is one of the largest <b>anthropogenic</b> causes of contamination in aquifers and renders large aquifers <b>unusable</b>. One common place for this issue is in the American Midwest where water has been so contaminated, <b>it can be lit on fire</b> for brief periods of time. It is this same water that is used for <b>irrigation</b> as well affecting countless <b>crops</b> shipped all around the world.\n
        \nThe Solution:\nTo stop this we must <b>lobby for change in legislation</b> to reduce fracking and instill more strict action against fracking. Furthermore, the faster we move towards <b>renewable energy</b>, the faster we can rid harmful methods of deriving energy such as fracking. </string>
    <string name="links_resources">[links to resources]</string>
    <string name="description_about_us">We are a group of five students from the <b>Nikola Tesla STEM High School</b> on a mission to educate the world about one of the most <b>valuable</b>, and <b>threatened</b>, water sources on our planet: the <b>aquifer</b>.\n
        \nInspired by our own reliance on an aquifer and our familiarity with the measures that must be taken to preserve the <b>health and safety</b> of its water, we have set out to <b>edcuate</b> both our community and a more <b>global</b> one about the importance of <b>aquifers</b> and <b>swales</b> and the effects of <b>human behavior</b> on them.\n
        \nCheck out our website to learn more about our education campaign and ongoing efforts:\n
        <a href="url">aquifereducation.wix.com/teslastem</a></string>
    <string name="title_activity_resources">Resources</string>
    <string name="title_activity_map_one">MapOne</string>
    <string name="title_activity_map_two">MapTwo</string>
    <string name="title_activity_map_three">MapThree</string>
    <string name="title_activity_map_four">MapFour</string>

</resources>
