<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ripple="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.teslastem.aquifereducation.WorldMap">

    <com.andexert.library.RippleView
        android:layout_width="fill_parent"
        android:layout_height="85dp"
        android:id="@+id/button4"
        android:background="#006666"
        ripple:rv_rippleDuration="200" >
        <TextView
            android:id="@+id/text4"
            android:text="@string/button_problem1"
            android:textColor="#ffffff"
            android:textSize="40sp"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"/>
    </com.andexert.library.RippleView>

    <com.andexert.library.RippleView
        android:layout_width="fill_parent"
        android:layout_height="85dp"
        android:id="@+id/button5"
        android:background="#009999"
        android:layout_below="@+id/button4"
        ripple:rv_rippleDuration="200" >
        <TextView
            android:textColor="#ffffff"
            android:textSize="40sp"
            android:text="@string/button_problem2"
            android:id="@+id/text5"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />
    </com.andexert.library.RippleView>

    <com.andexert.library.RippleView
        android:layout_width="fill_parent"
        android:layout_height="85dp"
        android:id="@+id/button6"
        android:background="#00cccc"
        android:layout_below="@+id/button5"
        ripple:rv_rippleDuration="200" >
        <TextView
            android:textColor="#ffffff"
            android:textSize="40sp"
            android:text="@string/button_problem3"
            android:id="@+id/text6"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />
    </com.andexert.library.RippleView>
    <com.andexert.library.RippleView
        android:layout_width="fill_parent"
        android:layout_height="85dp"
        android:id="@+id/button7"
        android:background="#66e0e0"
        android:layout_below="@+id/button6"
        ripple:rv_rippleDuration="200" >
        <TextView
            android:textColor="#ffffff"
            android:textSize="40sp"
            android:text="@string/button_problem4"
            android:id="@+id/text7"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />
    </com.andexert.library.RippleView>
</RelativeLayout>
